<resources>
    <string name="app_name">GEM</string>
    <string name="boas_vindas">Bem vindo ao GEM</string>
    <string name="login">Login</string>
    <string name="insiraseuemail">Insira seu e-mail</string>
    <string name="Senha">Senha</string>
    <string name="insirasuasenha">Insira sua senha</string>
    <string name="enter">Entrar</string>
    <string name="esqueci_minha_senha">Esqueci minha senha</string>
    <string name="boletim">Notas</string>
    <string name="calendario">Calendário</string>
    <string name="informacoes_pessoais">Dados Pessoais</string>
    <string name="navigation_drawer_open">Abrir</string>
    <string name="navigation_drawer_close">Fechar</string>
    <string name="title_activity_horario">HorarioActivity</string>
    <string name="eliminar_contatos">Eliminar</string>
    <string name="adicionar_contato">Adicionar</string>
    <string name="title_activity_registrar">RegistrarActivity</string>

</resources>
