<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/recarregar"
          android:icon="@drawable/refresh"
          android:title="@string/boletim"
          app:showAsAction="always" />
    <item android:id="@+id/pesquisar"
          android:icon="@drawable/search"
          android:title="@string/calendario"
          app:showAsAction="always" />
    <item android:id="@+id/action_adicionar"
          android:title="@string/adicionar_contato"
          app:showAsAction="never" />
    <item android:id="@+id/sobre"
          android:title="Sobre"
          app:showAsAction="ifRoom" />
    <item android:id="@+id/ajuda"
          android:title="Ajuda"
          app:showAsAction="ifRoom"/>

</menu>