<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Controladores.LoginActivity">

    <LinearLayout
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#fff"
            android:orientation="vertical"
            tools:layout_editor_absoluteY="0dp"
            tools:layout_editor_absoluteX="89dp">

        <ImageView
                android:layout_width="match_parent"
                android:layout_height="179dp"
                android:layout_marginTop="1dp"
                android:padding="50dp"
                android:adjustViewBounds="true"
                android:src="@drawable/logo_gem_um"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textColor="#000000"
                android:textStyle="bold"
                android:textSize="40dp"
                android:layout_marginTop="10dp"
                android:text="@string/boas_vindas"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginLeft="70dp"
                android:textColor="#000000"
                android:layout_marginTop="30dp"
                android:text="@string/login"/>

        <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:textAlignment="center"
                android:background="@drawable/model_buton"
                android:textColorHint="#000000"
                android:hint="@string/insiraseuemail"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="70dp"
                android:layout_gravity="left"
                android:textColor="#000000"
                android:text="@string/Senha"
                android:layout_marginTop="40dp"/>

        <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:inputType="textPassword"
                android:background="@drawable/model_buton"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:textAlignment="center"
                android:textColorHint="#000000"
                android:hint="@string/insirasuasenha"/>

        <CheckBox
                android:id="@+id/checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_gravity="center"
                android:text="Salvar usuário"/>

        <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/model_buton"
                android:text="@string/enter"
                android:textColor="#000000"
                android:layout_marginTop="100dp"
                android:layout_marginLeft="70dp"
                android:layout_marginRight="70dp"/>

        <TextView
                android:id="@+id/tv_forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="10dp"
                android:textColor="#000000"
                android:text="@string/esqueci_minha_senha"
                android:layout_marginTop="30dp"
                android:layout_gravity="center_horizontal"/>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>